Sets up views and form partial. Sets routes.

--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,1 +1,9 @@
-_form.html.erb
+<%= simple_form_for(@project) do |f| %>
+  <%= f.error_notification %>
+
+  <%= f.input :name %>
+  <%= f.input :description %>
+  <%= f.input :notes %>
+  <%= f.button :submit %>
+
+<% end %>
