--- a/app/views/projects/_goal_fields.html.erb
+++ b/app/views/projects/_goal_fields.html.erb
@@ -1,3 +1,7 @@
-<%= f.input :goal %>
-<%= f.input :done %>
-<%= link_to_remove_association "remove goal", f %>
+<div class="nested-fields">
+  <%= f.input :goal %>
+  <%= f.input :done %>
+  <div class="link">
+    <%= link_to_remove_association "remove", f %>
+  </div>
+</div>  
