--- a/app/views/projects/_goal_fields.html.erb
+++ b/app/views/projects/_goal_fields.html.erb
@@ -2,6 +2,6 @@
   <%= f.input :goal %>
   <%= f.input :done %>
   <div class="link">
-    <%= link_to_remove_association "remove", f %>
+    <%= link_to_remove_association "Remove Goal", f %>
   </div>
 </div>  
