--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -7,7 +7,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="#">Project Manager</a>
+    <a class="navbar-brand" href="/">Project Manager</a>
   </div>
     <ul class="nav navbar-nav navbar-right">
       <li><a href="#">Sign in</a></li>
