Fixes 'conversation' issue on projects controller. Styles index page.

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,3 +1,7 @@
-<% @projects.each do |project| %>
-  <%= @project.name %>
-<% end %>
+<div class="well well-lg">
+  <% @projects.each do |project| %>
+    <h2><%= link_to project.name, project_path(project) %></h2>
+    <p><%= project.description %></p>
+    <hr>
+  <% end %>
+</div>
