changes to the project show page

--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -25,7 +25,7 @@
           <%= render 'task_fields', f: task %>
         <% end %>
         <div class="link">
-          <%= link_to_add_association 'Add task', f, :tasks %>
+          <%= link_to_add_association 'Add Task', f, :tasks %>
         </div>
       </div>
       <%= f.input :notes %>
