--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,3 +1,7 @@
+<div class="row">
+  <h1 class="col-md-8">All projects</h1>
+  <br /><%= link_to "New Project", new_project_path, class: "btn btn-primary btn-md col-md-4" %>
+</div>
 <div class="well well-lg">
   <% @projects.each do |project| %>
     <h2><%= link_to project.name, project_path(project) %></h2>
