--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,1 +1,31 @@
 <h1><%= @project.name %></h1>
+<p><%= @project.description %></p>
+<h3>Members</h3>
+<% @project.members.each do |m| %>
+  <p><%= m.name %> | <%= m.role %></p>
+<% end %>  
+
+<h3>Goals</h3>
+<ul>
+  <% @project.goals.each do |g| %>
+    <li><%= g.goal %></li>
+  <% end %>
+</ul> 
+
+
+<h3>Tasks</h3>
+<ul>
+<% @project.tasks.each do |t| %>
+  <% if t.done %>
+    <li class="done"><%= t.task %></li>  
+  <% else %>
+    <li><%= t.task %></li>
+  <% end %>
+<% end %>  
+</ul> 
+
+<h3>Notes</h3>
+<p><%= @project.notes %></p>
+
+<%= link_to 'Edit', edit_project_path(@project) %> |
+<%= link_to 'Back', projects_path %>
