--- a/app/views/projects/_goal_fields.html.erb
+++ b/app/views/projects/_goal_fields.html.erb
@@ -1,7 +1,9 @@
-<div class="nested-fields">
-  <%= f.input :goal %>
-  <%= f.input :done %>
-  <div class="link">
-    <%= link_to_remove_association "Remove Goal", f %>
+<div class="nested-fields"> 
+  <div class="row">
+    <div class="col-xs-1"><%= f.input :done, label: false %></div>
+    <div class="col-xs-8"><%= f.input :goal, label: false, placeholder: 'Goal' %></div>
+    <div class="link">
+      <div class="col-xs-3"><%= link_to_remove_association "Remove Goal", f %></div>
+    </div>
   </div>
 </div>  
