--- a/app/views/projects/_task_fields.html.erb
+++ b/app/views/projects/_task_fields.html.erb
@@ -1,8 +1,9 @@
 <div class="nested-fields">
-  <%= f.input :done %>
-  <%= f.input :order %>
-  <%= f.input :task %>
-  <div class="link">
-    <%= link_to_remove_association "Remove Task", f %>
-  </div>
+  <div class="row">
+    <div class="col-xs-1"><%= f.input :done, label: false %></div>
+    <div class="col-xs-8"><%= f.input :task, label: false, placeholder: 'Task' %></div>    
+    <div class="link">
+      <div class="col-xs-3"><%= link_to_remove_association "Remove Task", f %></div>      
+    </div>
+  </div> 
 </div>
