--- a/app/views/projects/_goal_fields.html.erb
+++ b/app/views/projects/_goal_fields.html.erb
@@ -3,7 +3,8 @@
     <div class="col-xs-1"><%= f.input :done, label: false %></div>
     <div class="col-xs-8"><%= f.input :goal, label: false, placeholder: 'Goal' %></div>
     <div class="link">
-      <div class="col-xs-3"><%= link_to_remove_association "Remove Goal", f %></div>
+      <div class="col-xs-3"><%= link_to_remove_association "Remove Goal", f, :class => "btn btn-danger" %></div>
     </div>
   </div>
+  <br>
 </div>  
