--- a/app/views/projects/_member_fields.html.erb
+++ b/app/views/projects/_member_fields.html.erb
@@ -1,9 +1,10 @@
 <div class="nested-fields">
   <div class="row">
-    <div class="col-xs-4 col-md-offset-1"><%= f.input :name, label: false, placeholder: 'Name' %></div>
+    <div class="col-xs-5"><%= f.input :name, label: false, placeholder: 'Name' %></div>
     <div class="col-xs-4"><%= f.input :role, label: false, placeholder: 'Role' %></div>
     <div class="link">
-      <div class="col-xs-3"><%= link_to_remove_association "Remove Member", f %></div>
+      <div class="col-xs-3"><%= link_to_remove_association "Remove Member", f, :class => "btn btn-danger" %></div>
     </div>
   </div>
+  <br>
 </div>
