--- a/app/views/projects/_task_fields.html.erb
+++ b/app/views/projects/_task_fields.html.erb
@@ -3,7 +3,8 @@
     <div class="col-xs-1"><%= f.input :done, label: false %></div>
     <div class="col-xs-8"><%= f.input :task, label: false, placeholder: 'Task' %></div>    
     <div class="link">
-      <div class="col-xs-3"><%= link_to_remove_association "Remove Task", f %></div>      
+      <div class="col-xs-3"><%= link_to_remove_association "Remove Task", f, :class => "btn btn-danger" %></div>      
     </div>
   </div> 
+  <br>
 </div>
