--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -5,7 +5,7 @@
 <div class="well well-lg">
   <% @projects.each do |project| %>
     <h2><%= link_to project.name, project_path(project) %></h2>
-    <p><%= project.description %></p>
+    <p><%= simple_format(truncate(project.description, length: 140, separator: ' ')) %></p>
     <hr />
   <% end %>
 </div>
