--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,5 +1,5 @@
 <h1><%= @project.name.titleize %></h1>
-<p><%= @project.description %></p>
+<p><%= simple_format(@project.description) %></p>
 <h3>Members</h3>
 <% @project.members.each do |m| %>
   <p><%= m.name %> | <%= m.role %></p>
@@ -25,7 +25,7 @@
 </ul> 
 
 <h3>Notes</h3>
-<p><%= @project.notes %></p>
+<p><%= simple_format(@project.notes) %></p>
 
 <%= link_to 'Edit', edit_project_path(@project) %> |
 <%= link_to 'Back', projects_path %>
