minor changes for the style.

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row container">
   <h1 class="col-md-8">All projects</h1>
   <br /><%= link_to "New Project", new_project_path, class: "btn btn-primary btn-md col-md-4" %>
 </div>
