--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -10,8 +10,12 @@
     <a class="navbar-brand" href="/">Project Manager</a>
   </div>
     <ul class="nav navbar-nav navbar-right">
-      <li><a href="#">Sign in</a></li>
-      <li><a href='#'>Sign up</a></li>
+      <% if user_signed_in? %>
+        <li><%= link_to current_user.name, edit_user_registration_path %></li>
+        <li><%= link_to "Logout", destroy_user_session_path %></li>
+      <% else %>
+        <li><%= link_to "Sign in", new_user_session_path %></li>
+      <% end %>
     </ul>
   </div><!-- /.navbar-collapse -->
 </nav>
